@@ -1,3 +1,9 @@
+2012-09-07  Donal K. Fellows  <dkf@users.sf.net>
+
+	* generic/tkCanvPs.c (TkCanvPostscriptCmd): [Bug 3565533]: Purge use
+	of variable that was only ever checked once immediately afterwards,
+	except for one (buggy) case where it was checked without assignment.
+
 2012-08-30  Andreas Kupries  <andreask@activestate.com>
 
 	* generic/tkCanvWind.c (CanvasPsWindow): Unbreak AIX, replaced use
